# safe-redirect-url

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml
docs/reference/: safe_redirect_url.md
safe_redirect_url/: __init__.py
tests/: test_add.py  test_safe_redirect_url.py
